still working on saving notes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,7 @@
-<div id="wrapper">
-    <h1>Article Scraper</h1>
+<div id="container">
+    <div class="jumbotron">
+        <h1>Fighting Games Article Scraper</h1>
+    </div>
     <div id="articles">
         <ol>
             {{#each article}}
