--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,14 @@
 body { 
-    background-color: #F2F6D0 
+    background-color: #ffffff; 
 }
 
-#wrapper {
+.jumbotron {
+    background-color: #000000;
+    color: #ffffff;
+    padding-left: 50px;
+}
+
+#container {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
@@ -13,7 +19,6 @@ body {
     display: inline-block;
     overflow: auto;
     width: 60%;
-    height: 700px;
 }
       
 #notes {
