--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,6 +25,10 @@ body {
     float: right;
     width: 30%;
 }
+
+#scrapearticles {
+    margin-bottom: 20px;
+}
       
 textarea, input {
     display: block;
